frontend/src/components/PostModal/styles/PostModal.module.scss
.modalWrapper {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    z-index: 10000;
    width: 90%;
    height: 90%;
    > div {
        > div {
            > div {
                padding-bottom: 25px;
            }
        }
    }
    img {
        max-height: 500px;
    }
    padding-top: 25px;
}

@media only screen and (max-width: 900px) {
    .modalWrapper {
        width: 100%;
        height: 100%;
    }
}

.fadeIn {
    opacity: 1;
	animation-name: fadeInOpacity;
	animation-iteration-count: 1;
	animation-timing-function: ease-in;
	animation-duration: 0.25s;
}

.dur1s {
    animation-duration: 1s;
}

@keyframes fadeInOpacity {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

.overlay {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0.8);
    z-index: 10000;
    cursor: pointer;
}

.postsContainerWrapper {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    min-height: 750px;
    margin-bottom: 50px;
}

.limitSpace {
    width: 80%;
    min-height: 100%;
}

.absoluteButton {
    position: absolute;

    display: flex;
    justify-content: center;

    top: 2.5px;
    right: 2.5px;

    border: 1px solid black;

    width: 20px;
    height: 20px;

    cursor: pointer;

    p {
        position: absolute;
        top: -3.5px;
        color: black;
        text-decoration: inherit;
        margin: 0px;
    }
}

